[metadata]
name = SQLAlchemy_Catalyst
version = attr: sqlalchemy_catalyst.__version__
author = Daniel Cavalcante
author_email = dcavalcante@gmail.com
keywords = sqlalchemy, sql, mysql, sqlite, postgresql, helpers

description = A collection of helpers for SQLAlchemy
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/dcavalcante/SQLAlchemy-Catalyst
download_url = https://github.com/dcavalcante/SQLAlchemy-Catalyst/refs/tags/v0.1

license = MIT
license_file = LICENSE

classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6

[options]
install_requires =
  SQLAlchemy

python_requires = >=3.6